MyOrg/src/objects/External_Data__x.object
<CustomObject>
    <description>External Data</description>
    <externalDataSource>ExtJsonData</externalDataSource>
    <externalName>External Data</externalName>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Data</relationshipLabel>
        <relationshipName>External_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>color__c</fullName>
        <description>color</description>
        <externalDeveloperName>color</externalDeveloperName>
        <label>color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <description>value</description>
        <externalDeveloperName>value</externalDeveloperName>
        <label>value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>External Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Id</columns>
        <columns>DisplayUrl</columns>
        <columns>ExternalId</columns>
        <columns>color__c</columns>
        <columns>value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>External Data</pluralLabel>
</CustomObject>